Fixed a color bug when viewed on mobile

--- a/styles.css
+++ b/styles.css
@@ -19,11 +19,11 @@ color: #c0954b;
 }
 
 a:hover {
-color: #cb821e;
+color: #c0954b;
 }
 
 a:active{
-color: #cb821e;
+color: #c0954b;
 }
 
 a:visited{
